force-app/main/default/objects/hed__Term__c/fields/hed__Account__c.field-meta.xml
<CustomField>
    <fullName>hed__Account__c</fullName>
    <description>The Academic Program, Department, or entire Educational Institution this Term applies to. Select the Account that represents your Educational Institution if Terms are consistent across all Programs and Departments in your school.</description>
    <inlineHelpText>Le programme, le département ou l&apos;établissement auquel cette période scolaire s&apos;applique. Sélectionnez le compte qui représente votre établissement d&apos;enseignement si les périodes sont cohérentes dans tous les programmes et départements de votre école.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Terms</relationshipLabel>
    <relationshipName>Terms</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>