force-app/main/default/objects/hed__Term__c/fields/hed__Parent_Term__c.field-meta.xml
<CustomField>
    <fullName>hed__Parent_Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optionally, select the Term that this Term is a part of. For example, if this Term is Fall Quarter 2020, the Parent Term might be 2020/2021 School Year.</description>
    <inlineHelpText>Vous pouvez sélectionner le parent auquel cette période appartient. Par exemple, si cette période est le 1er trimestre 2020, la période de parente peut être Année scolaire 2020/2021.</inlineHelpText>
    <label>Parent Term</label>
    <referenceTo>hed__Term__c</referenceTo>
    <relationshipLabel>Terms</relationshipLabel>
    <relationshipName>Terms</relationshipName>
    <type>Lookup</type>
</CustomField>